# AoE

./: .gitignore  .travis.yml  AoE-iOS.podspec  AoE.podspec  CHANGELOG.md  CONTRIBUTING.md  Catalog.md  README.md  README_en.md  ROADMAP.md  _config.yml
.github/: FUNDING.yml
Android/: .gitignore  Advanced.md  Architecture.md  Concept.md  README.md  ReleaseNotes.md  build.gradle  constants.gradle  global_config.gradle  gradle.properties  publish.gradle  publish.sh  settings.gradle  upload.gradle  version.gradle
Android/aoe/extensions/aoes/: CMakeLists.txt  README.md  build.gradle
Android/aoe/extensions/aoes/src/androidTest/java/com/didi/aoe/extensions/aoes/: ExampleInstrumentedTest.java
Android/aoe/extensions/aoes/src/main/: AndroidManifest.xml
Android/aoe/extensions/aoes/src/main/cpp/aoes/: aes.h  aoe_security.cpp  aoe_security.h  aoes.c  aoes.cpp  aoes.h  md5.h
Android/aoe/extensions/aoes/src/main/java/com/didi/aoe/extensions/aoes/: AoeSecurity.java
Android/aoe/extensions/aoes/src/test/java/com/didi/aoe/extensions/aoes/: ExampleUnitTest.java
Android/aoe/extensions/vision/: CMakeLists.txt  README.md  build.gradle
Android/aoe/extensions/vision/src/androidTest/java/com/didi/aoe/extensions/vision/: ExampleInstrumentedTest.java
Android/aoe/extensions/vision/src/main/: AndroidManifest.xml
Android/aoe/extensions/vision/src/main/cpp/aoe_vision/: aoe_vision.cpp
Android/aoe/extensions/vision/src/main/cpp/aoe_vision/include/: aoe_vision.h
Android/aoe/extensions/vision/src/main/java/com/didi/aoe/extensions/vision/: AoeVision.java
Android/aoe/extensions/vision/src/test/java/com/didi/aoe/extensions/vision/: ExampleUnitTest.java
Android/samples/demo/features/squeeze/: CMakeLists.txt  README.md  build.gradle
Android/samples/demo/features/squeeze/src/androidTest/java/com/didi/aoe/features/squeeze/: ExampleInstrumentedTest.java
Android/samples/demo/features/squeeze/src/main/cpp/ncnn/include/: allocator.h  benchmark.h  blob.h  cpu.h  layer.h  layer_type.h  layer_type_enum.h  mat.h  modelbin.h  net.h  option.h  paramdict.h  pipeline.h  platform.h
Android/samples/demo/features/squeeze/src/main/cpp/squeeze/: squeezencnn_jni.cpp
Android/samples/demo/features/squeeze/src/main/java/com/didi/aoe/features/squeeze/: SqueezeInterpreter.java  SqueezeNcnn.java
Android/samples/demo/features/squeeze/src/main/java/com/didi/aoe/features/squeeze/extension/: SqueezeModelLoaderImpl.java  SqueezeModelOption.java
Android/samples/demo/features/squeeze/src/test/java/com/didi/aoe/features/squeeze/: ExampleUnitTest.java
docs/: README.md  _config.yml  home.md  index.md
docs/_about/: compat.md  (+1 more)
iOS/: .gitignore  Architecture.md  Concept.md  README.md  ReleaseNotes.md
linux/: CMakeLists.txt  README.md
linux/src/sample/squeeze/: CMakeLists.txt  squeeze.cpp  squeeze.h
linux/src/tool/: AOELog.h  AOEVision.c  AOEVision.h  CMakeLists.txt  md5.c
models/: README.md
tools/: README.md  setup.py
(+419 files in other folders)
